--- a/app/src/main/res/layout/fragment_parrafo.xml
+++ b/app/src/main/res/layout/fragment_parrafo.xml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="RECORRIDO"
-        android:layout_gravity="center_horizontal"
-        android:textSize="18sp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txt_fragmento"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="15sp"
-      />
-    <!-- android:text="@string/str_parrafo" -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DETALLES"
-        android:layout_gravity="center_horizontal"
-        android:textSize="18sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Recorrido: "
+                android:textSize="18sp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txt_detalle"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="15sp"/>
+            <TextView
+                android:id="@+id/txt_fragmento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Detalles: "
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/txt_detalle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
