--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-
-    >
-
+    android:orientation="horizontal"
+    tools:context=".MainActivity">
     <FrameLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="40"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_container"
-        android:layout_weight="1"
-        />
+        android:id="@+id/fragment_container">
 
-
-
+    </FrameLayout>
     <fragment
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="60"
         android:layout_height="match_parent"
+        android:id="@+id/fragment_parrafo"
         android:name="com.example.moviles_practica02.ParrafoFragment"
-        android:id="@+id/fgm_parrafo"
-        android:layout_weight="2"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </LinearLayout>
